src/test/ui/self/self_lifetime-async.nll.stderr
error[E0106]: missing lifetime specifier
  --> $DIR/self_lifetime-async.rs:9:44
   |
LL |     async fn foo<'b>(self: &'b Foo<'a>) -> &() { self.0 }
   |                                            ^
   |
   = note: return-position elided lifetimes require exactly one input-position elided lifetime, found none.

error: aborting due to previous error

For more information about this error, try `rustc --explain E0106`.
